--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ eureka:
     register-with-eureka: true
     service-url:
       default-zone: ${EUREKA_SERVERS}
+    fetch-registry: false
   instance:
     instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
 spring:
