--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,8 @@ server:
 eureka:
   client:
     register-with-eureka: true
-    service-url:
-      default-zone: ${EUREKA_SERVERS}
-    fetch-registry: false
+    serviceUrl:
+      defaultZone: ${EUREKA_SERVERS}
   instance:
     instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
 spring:
