--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ eureka:
   client:
     register-with-eureka: true
     serviceUrl:
-      defaultZone: ${EUREKA_SERVERS:https://app-referencia}
+      defaultZone: ${EUREKA_SERVERS:http://localhost:8756}
   #instance:
   #  instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}
 spring:
