--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ eureka:
     register-with-eureka: true
     serviceUrl:
       defaultZone: ${EUREKA_SERVERS:http://localhost:8756}
-  #instance:
-  #  instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}
+  instance:
+    instance-id: ${HOST}:${spring.application.name}:${spring.application.instance_id:${server.port}}
 spring:
   application:
     name: user-microservice
