--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ eureka:
     serviceUrl:
       defaultZone: ${EUREKA_SERVERS:http://localhost:8756}
   instance:
-    instance-id: ${HOST}:${spring.application.name}:${spring.application.instance_id:${server.port}}
+    instance-id: ${hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}
 spring:
   application:
     name: user-microservice
