--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,8 @@ eureka:
     register-with-eureka: true
     serviceUrl:
       defaultZone: ${EUREKA_SERVERS:http://localhost:8756}
+  instance:
+    instance-id: ${Host}:${spring.application.name}:${server.port}
 spring:
   application:
     name: user-microservice
